tests/baselines/reference/asyncArrowFunction6_es5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
asyncArrowFunction6_es5.ts(1,22): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncArrowFunction6_es5.ts(1,27): error TS1109: Expression expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== asyncArrowFunction6_es5.ts (2 errors) ====
    var foo = async (a = await): Promise<void> => {
                         ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                              ~
!!! error TS1109: Expression expected.
    }